Sun Aug 19 14:47:09 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.(c|glade): work more on server editting, now fills
	  out the static server edit dialog correctly

2001-08-19  Jesus Bravo Alvarez  <jba@pobox.com>

	* config/locale.alias, gui/gdmlanguages.c, gui/gdmconfig.glade,
	  gui/gdmconfig-strings.c: Added Galician (gl_ES) and Brazilian
	  Portuguese (pt_BR) entries.

Sat Aug 18 18:17:44 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch]: add some code for choosable servers (not
	  implemented yet

	* daemon/misc.c: search our own displays for used numbers first

	* daemon/gdm.c, daemon/server.c, daemon/slave.c:  Finish implementing
	  choosing of flexi servers

	* daemon/slave.c, daemon/verify{,-pam,-crypt,-shadow}.[ch]:
	  Correctly implement credential setting and some pam related	
	  fixes

	* gui/gdmconfig.(c|h|glade): Start on making configuration for 
	  all the new stuff including the server definitions, not finished
	  yet.

	* gui/gdmflexiserver.c: if there are multiple flexible servers,
	  give the user a choice

	* gui/gdmflexiserver-xnest.desktop.in: only show if Xnest exists

Fri Aug 17 23:56:14 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: Add a standard server definition and the Xnest
	  key

	* daemon/gdm.[ch], daemon/server.c:  Add server definition reading
	  and using

Fri Aug 17 14:47:08 2001  George Lebl <jirka@5z.com>

	* docs/C/Makefile.am: fix rules since the .sgml file changed

Fri Aug 17 04:42:34 2001  George Lebl <jirka@5z.com>

	* daemon/auth.c, daemon/display.c, daemon/gdm-net.[ch],
	  daemon/gdm.[ch], daemon/server.[ch], daemon/slave.[ch]:
 	  Finish implementation of flexible servers and lots of related
	  cleanup and restructuring that was related.

	* daemon/server.c: close all fd's when running the X server.

	* gui/gdmflexiserver.c: implement the updated protocol and implement
	  all the error codes

	* gui/Makefile.am, gui/gdmflexiserver(|-xnest).desktop.in,