@@ -1,3 +1,8 @@
+Mon Aug 20 01:10:24 2001  George Lebl <jirka@5z.com>
+
+	* gui/gdmconfig.c: finish editting of static servers and a bit
+	  of work on server definitions editting.
+
 Sun Aug 19 14:47:09 2001  George Lebl <jirka@5z.com>
 
 	* gui/gdmconfig.(c|glade): work more on server editting, now fills
